# btech_master

./: .gitignore.txt  CMakeLists.txt  btech.db  data.cpp  die.cpp  main.cpp  mech.cpp  mech.hpp  utilities.hpp
